objects/Binder__c.object
<CustomObject>
    <description>Compliance Requirement 
Collection of Knowledge Management Articles or Contents to be printed as PDF.

Rally US504</description>
    <fields>
        <fullName>Article_Type__c</fullName>
        <label>Article Type</label>
        <picklist>
            <picklistValues>
                <fullName>FAQ</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>How To</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product and Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Troubleshooting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tutorial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collections Pass Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collections Talking Point</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reference</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FOPP__c</fullName>
        <label>FOPP</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Date__c</fullName>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Include_Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Archived Articles</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_children__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include children of hierarchy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Knowledge_Container__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Knowledge Container</label>
        <referenceTo>KnowledgeContainer__c</referenceTo>
        <relationshipLabel>Binders</relationshipLabel>
        <relationshipName>Binders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SOQL_Archive_1__c</fullName>
        <label>SOQL Archive 1</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SOQL_Archive_2__c</fullName>
        <label>SOQL Archive 2</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SOQL_Archive_3__c</fullName>
        <label>SOQL Archive 3</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SOQL_DG_Pack__c</fullName>
        <label>SOQL DG Pack</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SOQL_Online__c</fullName>
        <label>SOQL Online</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>To_Date__c</fullName>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <label>Binder</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Comment__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Binder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Binders</pluralLabel>
    <recordTypes>
        <fullName>Print_Function_1</fullName>
        <active>true</active>
        <description>Select by Date Range, FOPP, Hierarchy, Article Type</description>
        <label>Print Function 1</label>
    </recordTypes>
    <recordTypes>
        <fullName>Print_Function_2</fullName>
        <active>true</active>
        <description>Select by Date Range for Active and Archived Knowledge Articles</description>
        <label>Print Function 2</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>